Portfolio Hero Section Incomplete

--- a/index.html
+++ b/index.html
@@ -6,38 +6,44 @@
   <meta name="description" content="html Basic Tags">
   <meta name="viewport" content="width = deice-width , initial-scale = 1.0">
   <title>Prabash</title>
-  <link rel="icon" type="image/ico" href="./favicon.ico"> 
+  <link rel="icon" type="image/ico" href="./favicon.ico">
+  <link rel="stylesheet" type="text/css" href="./style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alatsi&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Koulen&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Alef:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-<div>
-  <h1>Hello World</h1>
-  <p>Prabash Perera</p>
-  <img width="100" height="100" src="js.png">
-  <hr>
-  <!--Nesting Elements-->
-  <em>Nesting Element</em>
-  <!--Nesting Elements-->
-  <hr>
-  <!-- Inline-level-Elements -->
-  <em>Inline-level-Elements</em>
-  <em>Inline-level-Elements</em>
-  <em>Inline-level-Elements</em>
-  <!-- Inline-level-Elements -->
-  <hr>
-  <!-- Block-level-Elements -->
-  <div>Block-level-Elements</div>
-  <div>Block-level-Elements</div>
-  <div>Block-level-Elements</div>
-  <!-- Block-level-Elements -->
-  <hr>
-  <!-- Void Elements -->
-  <p>These are Void Elements</p>
-  <hr>
-  <hr>
-  <hr>
-  <hr>
-  <!-- Void Elements -->
-
-</div>
+  <div class="container">
+    <nav>
+      <div class="left-content">
+        <img src="./profilepicture.jpeg" alt="Profile Picture" class="prof-pic">
+      </div>
+      <ul>
+        <li><a>Home</a></li>
+        <li><a>About</a></li>
+        <li><a>Projects</a></li>
+        <li><a>Blog</a></li>
+      </ul>
+    </nav>
+    <img src="circle.svg" class="circle-svg">
+  </div>
+  <main class="here-section">
+    <h1>HI . I’M PRABASH</h1>
+    <h2>A <span>SOFTWARE</span> ENGINEER</h2>
+    <p>“A versatile learner, excels in programming, teamwork, and leadership while exploring love for music as a drummer and bassist."</p>
+    <div class="btn-container">
+      <button class="btn-explore">Explore</button>
+      <button class="btn-contact">Contact</button>
+    </div>
+  </main>
 </body>
 </html>
